2005-11-03  Vincent Noel <vnoel@cox.net>

	* Makefile.am:
	* loglist.c: (loglist_get_log_iter), (loglist_find_log_from_name),
	(loglist_unbold_log), (loglist_bold_log),
	(loglist_select_log_from_name), (loglist_remove_log),
	(loglist_add_log), (loglist_selection_changed), (loglist_connect),
	(loglist_init), (loglist_class_init), (loglist_get_type),
	(loglist_new):
	* loglist.h: New. Factor the loglist out in its own widget and module.
	
	* logrtns.c: (log_unbold):
	* logrtns.h:
	* logview.c: (logview_destroy), (logview_select_log_from_name),
	(logview_add_log), (logview_add_logs_from_names), (main),
	(logview_find_log_from_name), (logview_init), (logview_close_log),
	(logview_file_selected_cb), (logview_set_window_title),
	(logview_get_active_log), (logview_get_loglist):
	* logview.h:
	* misc.c: (string_get_date), (string_remove_bold_markup):
	* misc.h:
	* monitor.c: (monitor_callback): Reflect the changes.

2005-11-02  Vincent Noel <vnoel@cox.net>

        Use g_assert instead of g_return_if_fail in static
	functions. Delete useless functions. Use system functions for dates.
	
	* calendar.c: (calendar_mark_dates), (calendar_month_changed),
	(calendar_connect), (calendar_init), (calendar_new):
	* info.c: (loginfo_repaint), (loginfo_quit), (loginfo_new):
	* info.h:
	* log_repaint.c: (tree_path_find_row), (logview_update_statusbar),
	(tree_view_columns_set_visible), (model_fill_date_iter),
	(model_fill_iter), (logview_add_new_log_lines),
	(logview_show_model), (log_scroll_and_focus_path),
	(logview_create_model_no_date), (logview_create_model):
	* logrtns.c: (file_exist), (file_is_zipped), (file_is_log),
	(string_get_date_string), (log_read_dates), (log_stats_new),
	(log_open), (log_add_lines):
	* logview-findbar.c: (logview_tree_model_find_match):
	* logview.c: (logview_destroy), (save_session), (main),
	(logview_find_log_from_name), (logname_remove_markup),
	(loglist_selection_changed), (loglist_find_logname),
	(loglist_select_log_from_name), (loglist_add_log),